# ai-tutor

./: .gitignore  Dockerfile  README.md  answers.txt  docker-compose.yml  logged_sites.txt  pyproject.toml  walkthrough.md
data/: processed_chunks.json
scripts/: build_graph.py  debug_chunker.py  debug_graph_context.py  debug_links.py  ingest_website.py  inspect_content.py  inspect_ingestion.py  inspect_resources.py  pull_model.py  test_async_llm.py  verify_llm.py  verify_pipeline.py  visualize_graph.py
src/: utils.py
src/graph/: builder.py  chunker.py
src/ingestion/: scraper.py  slide_loader.py  store.py  youtube_loader.py
src/rag/: engine.py
src/ui/: chat.py
