[tool.poetry]
name = "erica-tutor"
version = "0.1.0"
description = "AI Tutor with GraphRAG"
authors = ["Antigravity <antigravity@deepmind.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.5"
networkx = "^3.2"
pymongo = "^4.6"
beautifulsoup4 = "^4.12"
youtube-transcript-api = "^0.6"
pypdf = "^4.0"
streamlit = "^1.30"
openai = "^1.10"
tiktoken = "^0.5"
scikit-learn = "^1.4"
matplotlib = "^3.8"
plotly = "^5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
